[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eskrim"
version = "1.0.6"
authors = [
  { name="Florian Plaza Oñate" }
]
description = "A program to estimate microbial richness from metagenomic sequencing data by counting k-mers"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Environment :: Console",
"Operating System :: OS Independent"
]
dependencies=['pyjellyfish']

[project.urls]
"Homepage" = "https://forgemia.inra.fr/metagenopolis/eskrim"

[project.scripts]
eskrim = "eskrim.eskrim:main"

[tool.setuptools.packages.find]
where = ["src"]
