[tool.poetry]
name = "eskrim"
version = "1.0.8"
description = "ESKRIM: EStimate with K-mers the RIchness in a Microbiome"
authors = ["Florian Plaza-Oñate <florian.plaza-onate@inrae.fr>"]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["Metagenomics"]
repository = "https://forgemia.inra.fr/metagenopolis/eskrim"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
packages = [
    { include = "eskrim" },
]

[tool.poetry.scripts]
eskrim = "eskrim.eskrim:main"

[tool.poetry.dependencies]
python = ">=3.12"
pyjellyfish = ">=1.3"

[tool.poetry.group.mypy.dependencies]
mypy = "^1.10"

[tool.poetry.group.pylint.dependencies]
pylint = "^3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
